# istio-sample-bookinfo-rust

./: Cargo.toml
src/: health.rs  main.rs
