[package]
name = "reviews"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
log = "0.4"
slog = "2"
slog-term = "2"
slog-stdlog = "3"
slog-scope = "4"
slog-async = "2"
slog-envlogger = "2.1.0"
slog-json = "2.2.0"